--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-    <title>Joan Ramos Refusta ☕</title>
+    <title>Walter Soriano ☕</title>
     <link rel="icon" type="image/x-icon" href="../static/assets/icons/J.ico" />
-    <meta itemprop="name" content="Joan Ramos Refusta ☕">
-    <meta itemprop="description" content="Joan Ramos Refusta's Portfolio.">
+    <meta itemprop="name" content="Walter Soriano ☕">
+    <meta itemprop="description" content="Walter Soriano's Portfolio.">
     <meta itemprop="image" content="https://www.joanramosrefusta.com/assets/social/screenshot.png">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Joan Ramos Refusta ☕">
+    <meta name="twitter:title" content="Walter Soriano ☕">
     <meta name="twitter:description" content="Joan Ramos Refusta's Portfolio.">
     <meta name="twitter:image" content="https://www.joanramosrefusta.com/assets/social/screenshot.png">
 
-    <meta property="og:site_name" content="Joan Ramos Refusta ☕">
+    <meta property="og:site_name" content="Walter Soriano ☕">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.joanramosrefusta.com">
-    <meta property="og:title" content="Joan Ramos Refusta ☕">
-    <meta property="og:description" content="Joan Ramos Refusta's Portfolio.">
+    <meta property="og:title" content="Walter Soriano ☕">
+    <meta property="og:description" content="Walter Soriano's Portfolio.">
     <meta property="og:image" content="https://www.joanramosrefusta.com/assets/social/screenshot.png">
 </head>
 
@@ -35,7 +35,7 @@
             you! &lt;3
         </p>
     </div>
-    <div class="loadingScreen"> JOAN <br> RAMOS <br> REFUSTA </div>
+    <div class="loadingScreen"> WALTER SORIANO </div>
     <div class="banner">
         <span class="banner-link" id="leftMonitor">ABOUT ME</span>
         <span class="banner-link" id="rightMonitor">PROJECTS</span>
