--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Walter Soriano ☕</title>
-    <link rel="icon" type="image/x-icon" href="../static/assets/icons/J.ico" />
+    <link rel="icon" type="image/x-icon" href="../static/assets/icons/W.ico" />
     <meta itemprop="name" content="Walter Soriano ☕">
     <meta itemprop="description" content="Walter Soriano's Portfolio.">
     <meta itemprop="image" content="https://www.joanramosrefusta.com/assets/social/screenshot.png">
